# mcp-ssh

./: .dxtignore  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MCP_SSH_FULL_TEST_REPORT.md  PUBLISHING.md  README.md  SCNET_DOCKER_MCP_TEST_REPORT.md  manifest.json  package-lock.json  package.json  server.mjs  server.test.mjs  start-silent.sh
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
docs/: architecture-v3.md  migration-v3.md
scripts/: build-dxt.sh
src/: config.mjs  main.rs  mcp-server.mjs  session-manager.mjs  shared.mjs  ssh-client.mjs  task-manager.mjs  task-status.mjs  task-status.test.mjs  tools.mjs  v3.contract.test.mjs  v3.test.mjs
src/adapters/: audit-logger.mjs  credential-provider.mjs  local-state-store.mjs  openssh-adapter.mjs  runtime-config.mjs
src/core/: connection-manager.mjs  master-recovery.mjs  operation-control.mjs  output-store.mjs  route-resolver.mjs  service-lifecycle.mjs  target-catalog.mjs  task-store.mjs
src/domain/: errors.mjs  result.mjs  target.mjs
src/mcp/: presenters.mjs  resources.mjs  server.mjs  tools.mjs
src/services/: exec-service.mjs  file-service.mjs  policy-guard.mjs  target-service.mjs  task-service.mjs  transfer-service.mjs
test-ssh/: Dockerfile  docker-compose.yml  v3.integration.test.mjs
