[package]
name = "mcp-ssh"
version = "4.0.0"
edition = "2021"
license = "MIT"
description = "OpenSSH runtime for Model Context Protocol"

[[bin]]
name = "mcp-ssh"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
directories = "5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
